--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ inputs:
     required: true
 runs:
   using: 'node12'
-  main: main.js
+  main: dist/index.js
 branding:
   icon: 'arrow-right-circle'
   color: 'blue'
